--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "date-fns": "^3.0.0"
+    "@emoji-mart/data": "^1.1.2",
+    "date-fns": "^3.0.0",
+    "emoji-mart": "^5.5.2",
+    "react-color": "^2.19.3",
+    "vanilla-picker": "^2.12.2"
   }
 }
