--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@emoji-mart/data": "^1.1.2",
     "date-fns": "^3.0.0",
     "emoji-mart": "^5.5.2",
+    "emoji-picker-element": "^1.21.1",
     "react-color": "^2.19.3",
     "vanilla-picker": "^2.12.2"
   }
